[package]
name = "oxidized_navigation_rapier"
description = "Rapier integration for oxidized_navigation."
version = "0.14.0"
edition = "2021"

authors = ["TheGrimsey"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/TheGrimsey/oxidized_navigation"
repository = "https://github.com/TheGrimsey/oxidized_navigation"
documentation = "https://docs.rs/crate/oxidized_navigation"

keywords = ["gamedev", "navmesh", "navmesh-generation", "bevy"]
categories = ["game-development"]

[lib]
bench = false

[features]
debug_draw = ["oxidized_navigation/debug_draw", "bevy_rapier3d/debug-render-3d"]

[[example]]
name = "rapier3d"
required-features = ["debug_draw"]

[[example]]
name = "rapier3d_heightfield"
required-features = ["debug_draw"]

[[example]]
name = "rapier3d_multi_floor"
required-features = ["debug_draw"]

[[test]]
name = "rapier3d"

[dependencies]
oxidized_navigation = { path = "../oxidized_navigation", version = "0.14" }
bevy = { version = "0.17", default-features = false }

bevy_rapier3d = { version = "0.31", default-features = false, features = ["dim3"] }
parry3d = { version = "0.25" }

[dev-dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "bevy_asset",
    "bevy_pbr",
    "bevy_render",
    "bevy_window",
    "bevy_winit",
    "x11",
    "ktx2",
    "tonemapping_luts",
    "std",
] }
bevy_editor_pls = { git = "https://github.com/onkoe/bevy_editor_pls.git" }
